--- a/module_999_test/lesson_001_test/student_tasks/task1.ipynb
+++ b/module_999_test/lesson_001_test/student_tasks/task1.ipynb
@@ -19,18 +19,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello!\n"
+      "Hello, world!\n"
      ]
     }
    ],
    "source": [
     "# пиши свой код\n",
-<<<<<<< HEAD
     "print('Hello, world!!!')"
-=======
-    "print('Hello!')"
->>>>>>> parent of 900fd8c... The first changes
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -49,7 +52,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
