--- a/module_999_test/lesson_001_test/student_tasks/task1.ipynb
+++ b/module_999_test/lesson_001_test/student_tasks/task1.ipynb
@@ -25,7 +25,7 @@
    ],
    "source": [
     "# пиши свой код\n",
-    "print('Hello, world!!!')"
+    "print('Hello, world!!!!!')"
    ]
   },
   {
