--- a/module_001_python/lesson_001_data_types/student_tasks/HomeWork.ipynb
+++ b/module_001_python/lesson_001_data_types/student_tasks/HomeWork.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "258\n",
+      "\n",
+      "Будучи вне дома, держите себя так, словно принимаете почетных гостей.\n",
+      "Пользуясь услугами людей, ведите себя так, словно свершаете торжественный обряд.\n",
+      "Не делайте другим того, чего себе не пожелаете.\n",
+      "Тогда ни в государстве, ни в семье не будет недовольства.\n",
+      "\n",
+      "\n",
+      "Будучи вне дама, держите себя так, славна принимаете пачетных гастей.\n",
+      "Пальзуясь услугами людей, ведите себя так, славна свершаете таржественный абряд.\n",
+      "Не делайте другим тага, чега себе не пажелаете.\n",
+      "Тагда ни в гасударстве, ни в семье не будет недавальства.\n",
+      "\n",
+      "\n",
+      "Будучи в дама, держите себя так, славна примаете пачетных гастей.\n",
+      "Пальзуясь услугами людей, ведите себя так, славна свершаете таржественный абряд.\n",
+      "Не делайте другим тага, чега себе  пажелаете.\n",
+      "Тагда  в гасударстве,  в семье  будет давальства.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Пишите свой код\n",
-    "\n"
+    "\n",
+    "print(len(quote))\n",
+    "print(quote)\n",
+    "\n",
+    "quote = quote.replace('о', 'а')\n",
+    "print(quote)\n",
+    "\n",
+    "quote = quote.replace('не', '')\n",
+    "quote = quote.replace('ни', '')\n",
+    "print(quote)"
    ]
   },
   {
@@ -53,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,12 +107,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "606097.8316800002\n",
+      "1 - ый / ой / ий год:\t 445500.00000000006\n",
+      "2 - ый / ой / ий год:\t 481140.00000000006\n",
+      "3 - ый / ой / ий год:\t 519631.20000000007\n",
+      "4 - ый / ой / ий год:\t 561201.6960000001\n",
+      "5 - ый / ой / ий год:\t 606097.8316800002\n"
+     ]
+    }
+   ],
    "source": [
     "# Пишите свой код\n",
-    "\n"
+    "\n",
+    "count = source_amt * (1 + annual_interest / 100) ** time\n",
+    "print(count)\n",
+    "\n",
+    "count2 = (1 + annual_interest / 100)\n",
+    "for i in range(1, 6):\n",
+    "    print(i, '- ый / ой / ий год:\\t', count2 ** i * source_amt)"
    ]
   }
  ],
@@ -97,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
