--- a/module_001_python/lesson_001_data_types/student_tasks/HomeWork.ipynb
+++ b/module_001_python/lesson_001_data_types/student_tasks/HomeWork.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -115,11 +115,11 @@
      "output_type": "stream",
      "text": [
       "606097.8316800002\n",
-      "1 - ый / ой / ий год:\t 445500.00000000006\n",
-      "2 - ый / ой / ий год:\t 481140.00000000006\n",
-      "3 - ый / ой / ий год:\t 519631.20000000007\n",
-      "4 - ый / ой / ий год:\t 561201.6960000001\n",
-      "5 - ый / ой / ий год:\t 606097.8316800002\n"
+      "33000.0\n",
+      "35640.0\n",
+      "38491.2\n",
+      "41570.5\n",
+      "44896.14\n"
      ]
     }
    ],
@@ -131,7 +131,7 @@
     "\n",
     "count2 = (1 + annual_interest / 100)\n",
     "for i in range(1, 6):\n",
-    "    print(i, '- ый / ой / ий год:\\t', count2 ** i * source_amt)"
+    "    print(round(count2 ** i * source_amt - count2 ** (i - 1) * source_amt, 2))"
    ]
   }
  ],
