--- a/module_001_python/lesson_002_operators/student_tasks/HomeWork.ipynb
+++ b/module_001_python/lesson_002_operators/student_tasks/HomeWork.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# Пишите здесь свой код\n",
-    "\n"
+    "if price < 3_000_000 and rooms == 2 and location != 'center':\n",
+    "    print(1)\n",
+    "elif location == 'center' and floor > 3 and elevator:\n",
+    "    print(2)\n",
+    "elif not elevator and price >= 1_000_000 and price <= 2_500_000:\n",
+    "    print(3)"
    ]
   },
   {
@@ -55,11 +67,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 95, 90, 85, 80, 75, 70, 65, 60, 55, 50, 45, 40, 35, 30, 25, 20, 15, 10, 5, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# пишите здесь свой код"
+    "print(list(range(100, -1, -5)))"
    ]
   },
   {
@@ -71,12 +91,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# пишите здесь свой код"
+    "### Решето Эратосфена"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131, 137, 139, 149, 151, 157, 163, 167, 173, 179, 181, 191, 193, 197, 199, 211, 223, 227, 229, 233, 239, 241, 251, 257, 263, 269, 271, 277, 281, 283, 293, 307, 311, 313, 317, 331, 337, 347, 349, 353, 359, 367, 373, 379, 383, 389, 397, 401, 409, 419, 421, 431, 433, 439, 443, 449, 457, 461, 463, 467, 479, 487, 491, 499, 503, 509, 521, 523, 541, 547, 557, 563, 569, 571, 577, 587, 593, 599, 601, 607, 613, 617, 619, 631, 641, 643, 647, 653, 659, 661, 673, 677, 683, 691, 701, 709, 719, 727, 733, 739, 743, 751, 757, 761, 769, 773, 787, 797, 809, 811, 821, 823, 827, 829, 839, 853, 857, 859, 863, 877, 881, 883, 887, 907, 911, 919, 929, 937, 941, 947, 953, 967, 971, 977, 983, 991, 997]\n",
+      "168\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = 2\n",
+    "n = 1000\n",
+    "a = list(range(m, n))\n",
+    "\n",
+    "for i in a:\n",
+    "    q = i\n",
+    "    while i <= n:\n",
+    "        i += q\n",
+    "        if i in a:\n",
+    "            a.remove(i)\n",
+    "\n",
+    "print(a)\n",
+    "print(len(a))"
    ]
   }
  ],
@@ -96,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
